--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@ layout: null
 
     <div class="container">
       <header class="header">
-        <h1>Bio.tools</h1>
+        <h1>Bio.tools Entry</h1>
         <h5>Essential scientific and technical information about software tools, databases and services for bioinformatics and the life sciences.</h5>
       </header>
 
