--- a/_includes/tools.html
+++ b/_includes/tools.html
@@ -1,4 +1,4 @@
-<div class="js-comments">
+<div class="js-biotools">
 	{% assign biotools = site.data.biotools | sort %}
 	{% for biotool in biotools reversed %}
 		{% assign biotoolData = biotool[1] %}
