--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,17 +1,16 @@
 <head>
 	<meta charset="utf-8">
 	<title>{{ site.title }}</title>
-	<meta name="description" content="">
-	<meta name="author" content="">
+	<!--meta name="description" content="From https://github.com/eduardoboucas/popcorn project"-->
+	<meta name="author" content="vmarcon">
 	<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
 	<link rel="stylesheet" href="https://storage.googleapis.com/code.getmdl.io/1.0.5/material.indigo-pink.min.css">
 	<script src="https://storage.googleapis.com/code.getmdl.io/1.0.5/material.min.js"></script>
 	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 	<link rel="stylesheet" type="text/css" href="/css/main.css">
+	<link rel="icon" href="https://avatars3.githubusercontent.com/u/10078639?s=60&v=4" />
 
-	<meta property="og:image" content="http://popcorn.staticman.net/images/staticman-avatar.png"/>
 	<meta property="og:title" content="{{ site.title }}"/>
-	<meta property="og:url" content="http://popcorn.staticman.net"/>
 	<meta property="og:site_name" content="Bio.tools"/>
 	<meta property="og:description" content="Essential scientific and technical information about software tools, databases and services for bioinformatics and the life sciences."/>
 </head>
