--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,8 @@ layout: null
   <body>
 	  
 	 <a href="https://bio.tools/"><img style="position: absolute; top: 5px; left: 10px; border: 0;" src="https://bio.tools/img/elixir_biotools_transparent.png" width="120" height="90" alt="Elixir biotools"></a>
-	 <a href="https://github.com/eduardoboucas/popcorn"><p style="position: absolute; top: 0; right: 0; border: 0;" >Made from eduardoboucas "popcorn" demo</p></a>
+	 <!--a href="https://github.com/eduardoboucas/popcorn"><p style="position: absolute; top: 0; right: 0; border: 0;" >Made from eduardoboucas "popcorn" demo</p></a-->
+	 <a href="https://github.com/eduardoboucas/popcorn"><img style="position: absolute; top: 25px; right: 10px; border: 0;" src="https://avatars2.githubusercontent.com/u/4162329?s=60&v=4" alt=" eduardoboucas"><p style="position: absolute; top: 0; right: 10px; border: 0;" >Made from eduardoboucas "popcorn" demo</p></a>
 
     <div class="container">
       <header class="header">
