--- a/_includes/tools.html
+++ b/_includes/tools.html
@@ -1,8 +1,12 @@
 <div class="js-biotools">
+	{% assign inc = 0 %}
 	{% assign biotools = site.data.biotools | sort %}
 	{% for biotool in biotools reversed %}
 		{% assign biotoolData = biotool[1] %}
-
+		{% assign inc = inc | plus: 1 %}
+		{% if inc == 4 %}
+			{% break %}
+		{% endif %}
 		<article class="review mdl-card mdl-shadow--2dp">
 		  <div class="mdl-card__title">
 		    <h2 class="mdl-card__title-text">{{ biotoolData.title }}</h2>
