--- a/_includes/tool-new.html
+++ b/_includes/tool-new.html
@@ -2,8 +2,8 @@
   <div class="form__spinner mdl-spinner mdl-spinner--single-color mdl-js-spinner is-active"></div>
   <fieldset class="field-group">
     <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-      <input class="mdl-textfield__input" type="text" id="biotool-form[title]" name="fields[title]"/>
-      <label class="mdl-textfield__label" for="biotool-form[title]">Tool name</label>
+      <input class="mdl-textfield__input" type="text" id="biotool-form[name]" name="fields[name]"/>
+      <label class="mdl-textfield__label" for="biotool-form[name]">Tool name</label>
     </div>
   </fieldset>
 
