change biotoolsid and homepage

--- a/_includes/tool-new.html
+++ b/_includes/tool-new.html
@@ -9,15 +9,15 @@
 
   <fieldset class="field-group">
     <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-      <input class="mdl-textfield__input" type="text" id="biotool-form[biotools]" name="fields[biotools]"/>
-      <label class="mdl-textfield__label" for="biotool-form[biotools]">Bio.tools id</label>
+      <input class="mdl-textfield__input" type="text" id="biotool-form[biotoolsid]" name="fields[biotoolsid]"/>
+      <label class="mdl-textfield__label" for="biotool-form[biotoolsid]">Bio.tools id</label>
     </div>
   </fieldset>
 
   <fieldset class="field-group">
     <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-      <input class="mdl-textfield__input" type="text" id="biotool-form[website]" name="fields[website]"/>
-      <label class="mdl-textfield__label" for="biotool-form[website]">Website</label>
+      <input class="mdl-textfield__input" type="text" id="biotool-form[homepage]" name="fields[homepage]"/>
+      <label class="mdl-textfield__label" for="biotool-form[homepage]">Homepage</label>
     </div>
   </fieldset>
 
