biotoolsid to biotoolsID

--- a/_includes/tool-new.html
+++ b/_includes/tool-new.html
@@ -9,8 +9,8 @@
 
   <fieldset class="field-group">
     <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-      <input class="mdl-textfield__input" type="text" id="biotool-form[biotoolsid]" name="fields[biotoolsid]"/>
-      <label class="mdl-textfield__label" for="biotool-form[biotoolsid]">Bio.tools id</label>
+      <input class="mdl-textfield__input" type="text" id="biotool-form[biotoolsID]" name="fields[biotoolsID]"/>
+      <label class="mdl-textfield__label" for="biotool-form[biotoolsID]">Bio.tools ID</label>
     </div>
   </fieldset>
 
