change format and display

--- a/_includes/tools.html
+++ b/_includes/tools.html
@@ -9,19 +9,22 @@
 		{% endif %}
 		<article class="review mdl-card mdl-shadow--2dp">
 		  <div class="mdl-card__title">
-		    <h2 class="mdl-card__title-text">{{ biotoolData.title }}</h2>
+		    <h2 class="mdl-card__title-text">{{ biotoolData.name }}</h2>
 		  </div>
 
 		  <div class="mdl-card__supporting-text">
                     <div class="review__description">
 		    	{{ biotoolData.description | markdownify }}
 		    </div>
-		    <p><strong>website: </strong> 
-		      <a href="{{ biotoolData.website }}" target="_blank">
+		    <p><strong>homepage: </strong> 
+		      <a href="{{ biotoolData.homepage }}" target="_blank">
 		        {{ biotoolData.website }}
 		      </a>
 		    </p>
-		    <p><strong>biotools ID: </strong>{{ biotoolData.biotools }}</p>
+		    <p><strong>biotools ID: </strong>{{ biotoolData.biotoolsID }}</p>
+		  </div>
+                  <div class="mdl-card__supporting-text">
+                    <p><strong>Operations: </strong>{{ biotoolData.operation }}</p>
 		  </div>
 		  <div class="mdl-card__actions mdl-card--border">
 		    <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect" href="https://dx.doi.org/{{ biotoolData.doi }}" target=”_blank”>
