test new generatedfield

--- a/_includes/tools.html
+++ b/_includes/tools.html
@@ -18,7 +18,7 @@
 		    </div>
 		    <p><strong>homepage: </strong> 
 		      <a href="{{ biotoolData.homepage }}" target="_blank">
-		        {{ biotoolData.website }}
+		        {{ biotoolData.homepage }}
 		      </a>
 		    </p>
 		    <p><strong>biotools ID: </strong>{{ biotoolData.biotoolsID }}</p>
